--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- TODO : FOLLOW THE TUTORIAL AND CREATE YOUR SITE -->
   <nav id="desktop-nav">
-    <div class="logo">John Doe</div>
+    <div class="logo">KJ Butler</div>
     <div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -49,8 +49,8 @@
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello I'm</p>
-      <h1>John Doe</h1>
-      <p class="section__text__p2">Frontend Developer</p>
+      <h1>KJ Butler</h1>
+      <p class="section__text__p2">Computer Engineer</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/resume-kjb.pdf')">
           Download Resume
