--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           Download Resume
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
-          Contact Info
+          Contact Me
         </button>
       </div>
       <div id="socials-container">
@@ -70,7 +70,7 @@
           src="./assets/github.png"
           alt="My Github profile"
           class="icon"
-          onclick="location.href='https://github.com/'"
+          onclick="location.href='https://github.com/kjb589/'"
         />
       </div>
     </div>
