--- a/index.html
+++ b/index.html
@@ -75,6 +75,51 @@
       </div>
     </div>
   </section>
+  <section id="about">
+    <p class="section__text__p1">Get To Know More</p>
+    <h1 class="title">About Me</h1>
+    <div class="section-container">
+      <div class="section__pic-container">
+        <img
+          src="./assets/about-pic.png"
+          alt="Profile picture"
+          class="about-pic"
+        />
+      </div>
+      <div class="about-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <img 
+              src="./assets/experience.png" 
+              alt="Experience icon"
+              class="icon"
+            />
+            <h3>Experience</h3>
+            <p>2+ years <br />Programming</p>
+          </div>
+          <div class="details-container">
+            <img 
+              src="./assets/education.png" 
+              alt="Education icon"
+              class="icon"
+            />
+            <h3>Education</h3>
+            <p>B.Sc. Computer Engineering</p>
+          </div>
+        </div>
+        <div class="text-container">
+          <p>
+            LOReM IPSUM
+          </p>
+        </div>
+      </div>
+    </div>
+    <img 
+      src="./assets/arrow.png" 
+      alt="icon arrow"
+      onclick="location.href='./experience"
+    />
+  </section>
 
   <!-- ADD THE LINK TO YOUR SCRIPT HERE -->
   <script src="script.js"></script>
