--- a/index.html
+++ b/index.html
@@ -120,6 +120,27 @@
       onclick="location.href='./experience"
     />
   </section>
+  <section id="experience">
+    <p class="section__text__p1">Explore My</p>
+    <h1 class="title">Experience</h1>
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-container">
+          <h2 class="experience-sub-title">Frontend Development</h2>
+          <div class="article-container">
+            <article>
+              <img 
+                src="./assets/checkmark.png"
+                alt="Experience icon"
+                class="icon" 
+              />
+              
+            </article>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- ADD THE LINK TO YOUR SCRIPT HERE -->
   <script src="script.js"></script>
